# BSU-FAMCS

./: .gitignore
ComputerSecurity/Lab1/: encoders.py  hackers.py  main.py  tests.py  utils.py
ComputerSecurity/Lab1/output/: output.txt  report.md
DatabaseModelling/: create.sql  drop.sql  queries.sql  seed.sql
DatabaseModelling/Labs/: 3.txt  4.txt  5.txt  6.txt  7.txt  8.txt
ParallelComputing/BlockMatricesMultiplication/: README.md
ParallelComputing/BlockMatricesMultiplication/Multiplication/: CMakeLists.txt  main.cpp  utilities.cpp  utilities.h
ParallelComputing/BlockMatricesMultiplication/Plots/: formatted_output.txt  main.py  output.txt
ProgrammingTechnologies/: Lab1-Diagrams.mdj  Lab1.mdj
ProgrammingTechnologies/Lab1 (PaintIt)/: .eslintignore  .eslintrc.json  main.js  out.gv  package-lock.json  package.json  webpack.config.js
ProgrammingTechnologies/Lab1 (PaintIt)/app/: index.html
SpecializationDiscipline/07.03/: Lab2.rb  top.docx  Задача 4.docx
SpecializationDiscipline/11.04/: .byebug_history  field.rb
SpecializationDiscipline/14.03/: .byebug_history  hunter.rb  main.rb
SpecializationDiscipline/21.03/: index.html  main.rb
SpecializationDiscipline/28.02/: Bad.txt  Deputat.txt  Good.txt  Medication.txt  main.rb
StatisticalModelling/: utils.py
StatisticalModelling/01_PoissonAndNormal/: main.py  output.txt
StatisticalModelling/02_Finances/: main.py  output.txt
StatisticalModelling/03_MonteCarlo/: main.py  output.txt
StatisticalModelling/Lab1/: linear_congruential_generator.py  main.py  output.txt
(+26 files in other folders)
